--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
             margin: 0;
             overflow: hidden;
             background-color: #000;
+            font-family: 'Arial', sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            text-align: center;
+            color: gold;
         }
         canvas {
             position: absolute;
@@ -16,11 +24,50 @@
             left: 0;
             width: 100%;
             height: 100%;
+            z-index: -1;
+        }
+        .menu {
+            position: relative;
+            z-index: 2;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            justify-content: center;
+        }
+        .card {
+            background: rgba(25, 25, 25, 0.9);
+            border: 2px solid gold;
+            padding: 20px;
+            width: 200px;
+            height: 150px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 15px;
+            font-size: 18px;
+            font-weight: bold;
+            color: white;
+            cursor: pointer;
+            transition: 0.3s;
+            box-shadow: 0 0 10px rgba(255, 215, 0, 0.8);
+        }
+        .card:hover {
+            background: gold;
+            color: black;
+            box-shadow: 0 0 20px rgba(255, 215, 0, 1);
+            transform: scale(1.1);
         }
     </style>
 </head>
 <body>
     <canvas id="background"></canvas>
+    <h1 style="font-size: 28px; text-shadow: 0 0 10px gold;">🎰 VIP Casino WebApp 🎰</h1>
+    <div class="menu">
+        <div class="card" onclick="alert('Прогноз RTP скоро будет!')">📊 Прогноз RTP</div>
+        <div class="card" onclick="alert('Топ-3 слотов скоро будет!')">🏆 Топ-3 бонуски</div>
+        <div class="card" onclick="alert('Испытай удачу скоро будет!')">🎲 Испытай удачу</div>
+        <div class="card" onclick="alert('Колесо удачи скоро будет!')">🎡 Колесо удачи</div>
+    </div>
     
     <script>
         const canvas = document.getElementById("background");
